src/test/ui/impl-trait/auto-trait.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait` for type `D<impl OpaqueTrait>`:
  --> $DIR/auto-trait.rs:21:1
   |
LL | impl<T: Send> AnotherTrait for T {}
   | -------------------------------- first implementation here
...
LL | impl AnotherTrait for D<OpaqueType> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `D<impl OpaqueTrait>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
